--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -1,71 +1,98 @@
-body {
-    background-color: #d8cbc4;
-    position: relative;
-    padding-bottom: 58px;
-    min-height: 95vh;
+* {
+    margin:0;
+    padding: 0;
 }
 
-#links {
-    font-family: 'Roboto Mono', monospace;
+html, body {
+    background-image: url(https://cdn.dribbble.com/users/1770290/screenshots/6232132/bg_83.gif);
+    background-size:cover;
+
+    height: 100%;
+}
+
+#title_name {
+    border-radius: 0 0 10px 10px;
     position: absolute;
+    padding-left: 20px;
+    padding-top: 30px;
+    font-size: 30px;
+    padding-bottom: 20px;
+    color: aliceblue;
     top: 0;
+    background-color: black;
     right: 0;
-    font-size: 25px;
-    padding-top: 40px;
-    padding-right: 40px;
-}
-
-#title {
-    color: #ffffff;
-    font-size: 35px;
-    font-family: 'Roboto Mono', monospace;
-    text-align: left;
-    padding-left: 30px;
-    position: absolute;
-    background-color: #6a4a3a;
-    top: 0;
     left: 0;
-    width: 100%;
-}
-
-#body {
-    position: relative;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    padding-top: 150px;
-    left: 0;
-    width: 100%;
-    font-size: 20px;
-}
-
-#name {
-    position: absolute;
-    font-family: 'Roboto Mono', monospace;
-    bottom: 0;
-    width: 100%;
-    right: 0;
-    background-color: #a08679;
-}
-
-#socials {
-    position: absolute;
-    font-family: 'Roboto Mono', monospace;
-    bottom: 0;
-    width: 20%;
-    height: 20;
-    left: 0;
-    padding-bottom: 10px;
-    padding-left: 1%;
-    background-color: #a08679;
-}
-
-#links a:link, #links a:visited {
-    color: #ffffff;
 }
 
 a:link, a:visited {
-    color: #6a4a3a;
+    color: white;
+    text-decoration: none;
 }
-a:hover {
+
+#navigation {
+    font-size: 30px;
+    color: aliceblue;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding-top: 30px;
+    padding-right: 50px;
+}
+
+#navigation a:link, a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+#bod {
+    position: absolute;
+    margin-top: 150px;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    font-size: xx-large;
     color: rgb(255, 255, 255);
+    font-family: 'Inter', sans-serif;
+}
+
+#footer {
+    position: relative;
+    height: 100px;
+    margin-top: -100px;
+    background-color: black;
+}
+
+#footer_name {
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding-top: 40px;
+    font-family: 'Inter', sans-serif;
+}
+
+#social {
+    color: white;
+    margin-top: -40px;
+    width: 50%;
+    padding-left: 20px;
+    left: 0;
+    font-family: 'Inter', sans-serif;
+}
+
+#container {
+    min-height: 100%;
+}
+
+#main {
+    padding-bottom: 100px;
+    overflow: auto;
+}
+
+footer a:link, a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(213, 123, 255);
 }
