--- a/styles/style_contact.css
+++ b/styles/style_contact.css
@@ -75,6 +75,7 @@ a:link, a:visited {
     margin-top: -40px;
     width: 20%;
     left: 0;
+    padding-left: 20px;
     font-family: 'Inter', sans-serif;
 }
 
