--- a/styles/style_work.css
+++ b/styles/style_work.css
@@ -72,6 +72,7 @@ a:link, a:visited {
 
 #social {
     color: white;
+    padding-left: 20px;
     margin-top: -40px;
     width: 20%;
     left: 0;
