--- a/styles/style_contact.css
+++ b/styles/style_contact.css
@@ -32,10 +32,11 @@ a:link, a:visited {
 #navigation {
     font-size: 30px;
     color: aliceblue;
+    padding-top: 25px;
     position: absolute;
     right: 0;
     top: 0;
-    padding-top: 30px;
+    padding-top: 25px;
     padding-right: 50px;
 }
 
@@ -44,9 +45,20 @@ a:link, a:visited {
     text-decoration: none;
 }
 
-#bod {
+#title {
     position: absolute;
-    margin-top: 150px;
+    margin-top: 120px;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    font-size: xx-large;
+    color: rgb(255, 255, 255);
+    font-family: 'Inter', sans-serif;
+}
+
+#paragraph {
+    position: absolute;
+    margin-top: 300px;
     width: 100%;
     height: 200px;
     text-align: center;
