--- a/styles/style_aboutme.css
+++ b/styles/style_aboutme.css
@@ -12,6 +12,7 @@ html, body {
 
 #title_name {
     border-radius: 0 0 10px 10px;
+    font-family: 'Inter', sans-serif;
     position: absolute;
     padding-left: 20px;
     padding-top: 20px;
@@ -35,7 +36,7 @@ a:link, a:visited {
     position: absolute;
     right: 0;
     top: 0;
-    padding-top: 30px;
+    padding-top: 25px;
     padding-right: 50px;
 }
 
