--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -35,7 +35,7 @@ a:link, a:visited {
     position: absolute;
     right: 0;
     top: 0;
-    padding-top: 30px;
+    padding-top: 25px;
     padding-right: 50px;
 }
 
@@ -44,13 +44,13 @@ a:link, a:visited {
     text-decoration: none;
 }
 
-#bod {
+#body {
     position: absolute;
-    margin-top: 150px;
+    margin-top: 0.5%;
     width: 100%;
     height: 200px;
     text-align: center;
-    font-size: xx-large;
+    font-size: 50px;
     color: rgb(255, 255, 255);
     font-family: 'Inter', sans-serif;
 }
