--- a/styles/style_work.css
+++ b/styles/style_work.css
@@ -35,7 +35,7 @@ a:link, a:visited {
     position: absolute;
     right: 0;
     top: 0;
-    padding-top: 30px;
+    padding-top: 25px;
     padding-right: 50px;
 }
 
@@ -44,9 +44,9 @@ a:link, a:visited {
     text-decoration: none;
 }
 
-#bod {
+#title {
     position: absolute;
-    margin-top: 150px;
+    margin-top: 120px;
     width: 100%;
     height: 200px;
     text-align: center;
@@ -86,6 +86,7 @@ a:link, a:visited {
 #main {
     padding-bottom: 100px;
     overflow: auto;
+    height: 800px;
 }
 
 footer a:link, a:visited {
