--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -35,8 +35,8 @@ a:link, a:visited {
     position: absolute;
     right: 0;
     top: 0;
-    padding-top: 25px;
-    padding-right: 50px;
+    margin-top: 25px;
+    margin-right: 50px;
 }
 
 #navigation a:link, a:visited {
@@ -45,10 +45,8 @@ a:link, a:visited {
 }
 
 #body {
-    position: absolute;
-    margin-top: 0.5%;
-    width: 100%;
-    height: 200px;
+    position: relative;
+    margin-top: 10%;
     text-align: center;
     font-size: 50px;
     color: rgb(255, 255, 255);
