--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -46,7 +46,7 @@ a:link, a:visited {
 
 #body {
     position: relative;
-    margin-top: 10%;
+    margin-top: 150px;
     background-color: aqua;
     text-align: center;
     font-size: 50px;
